--- a/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
+++ b/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
@@ -43,6 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
+    <Compile Include="Artist.cs" />
+    <Compile Include="Files.cs" />
+    <Compile Include="Free.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="Premium.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
