--- a/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
+++ b/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
@@ -47,10 +47,12 @@
     <Compile Include="Artist.cs" />
     <Compile Include="Files.cs" />
     <Compile Include="Free.cs" />
+    <Compile Include="Movies.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Premium.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Songs.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
