--- a/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
+++ b/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.cs" />
+    <Compile Include="Album.cs" />
     <Compile Include="Artist.cs" />
     <Compile Include="Files.cs" />
     <Compile Include="Free.cs" />
