--- a/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
+++ b/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
@@ -46,13 +46,17 @@
     <Compile Include="Admin.cs" />
     <Compile Include="Album.cs" />
     <Compile Include="Artist.cs" />
+    <Compile Include="Computer.cs" />
+    <Compile Include="Console.cs" />
     <Compile Include="Files.cs" />
     <Compile Include="Free.cs" />
     <Compile Include="Movies.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Playlist.cs" />
     <Compile Include="Premium.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="Songs.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
