--- a/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
+++ b/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
@@ -56,18 +56,18 @@
     <Compile Include="Movies.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Playlists.cs" />
+    <Compile Include="PlayMovie.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlayMovie.Designer.cs">
+      <DependentUpon>PlayMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Premium.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Songs.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="Video.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Video.Designer.cs">
-      <DependentUpon>Video.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -92,8 +92,8 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Video.resx">
-      <DependentUpon>Video.cs</DependentUpon>
+    <EmbeddedResource Include="PlayMovie.resx">
+      <DependentUpon>PlayMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
