--- a/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
+++ b/ProyectoEquipo13/ProyectoEquipo13/ProyectoEquipo13.csproj
@@ -48,11 +48,13 @@
     <Compile Include="Admin.cs" />
     <Compile Include="Album.cs" />
     <Compile Include="Artist.cs" />
+    <Compile Include="ChangePasswordEventArgs.cs" />
+    <Compile Include="ChangeUserNameEventArgs.cs" />
     <Compile Include="Computer.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="Files.cs" />
     <Compile Include="Free.cs" />
-    <Compile Include="ISubscribing.cs" />
+    <Compile Include="MailSender.cs" />
     <Compile Include="Movies.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Playlists.cs" />
@@ -65,6 +67,7 @@
     <Compile Include="Premium.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterEventArgs.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="SmartPlaylist.cs" />
     <Compile Include="Songs.cs" />
