--- a/ProyectoEquipo13/Proyecto equipo 13 entrega 3/Proyecto equipo 13 entrega 3.csproj
+++ b/ProyectoEquipo13/Proyecto equipo 13 entrega 3/Proyecto equipo 13 entrega 3.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Playlists.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Resources\resources.designer.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="SmartPlaylist.cs" />
     <Compile Include="Songs.cs" />
@@ -98,7 +99,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Resources\resources.resx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -112,6 +115,5 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
